<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/category_dial">

        <ListPreference
            android:key="pref_hours_preset"
            android:title="@string/pref_hours_preset_title"
            android:entries="@array/hours_preset_entries"
            android:entryValues="@array/hours_preset_values"
            android:defaultValue="12"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:key="pref_hours_custom"
            android:title="@string/pref_hours_custom_title"
            android:max="24"
            android:defaultValue="12"
            app:min="2"
            app:showSeekBarValue="true" />

        <ListPreference
            android:key="pref_dial_shape"
            android:title="@string/pref_dial_shape_title"
            android:entries="@array/dial_shape_entries"
            android:entryValues="@array/dial_shape_values"
            android:defaultValue="circle"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_date_format"
            android:title="@string/pref_date_format_title"
            android:entries="@array/date_format_entries"
            android:entryValues="@array/date_format_values"
            android:defaultValue="number"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="pref_mirror"
            android:title="@string/pref_mirror_title"
            android:summary="@string/pref_mirror_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_hands">

        <SwitchPreferenceCompat
            android:key="pref_second_hand"
            android:title="@string/pref_second_hand_title"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_smooth_seconds"
            android:title="@string/pref_smooth_title"
            android:summary="@string/pref_smooth_summary"
            android:dependency="pref_second_hand"
            android:defaultValue="false" />

        <ListPreference
            android:key="pref_fast_hand"
            android:title="@string/pref_fast_hand_title"
            android:entries="@array/fast_hand_entries"
            android:entryValues="@array/fast_hand_values"
            android:defaultValue="none"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_touch">

        <SwitchPreferenceCompat
            android:key="pref_touch_hands"
            android:title="@string/pref_touch_hands_title"
            android:summary="@string/pref_touch_hands_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_pinch_zoom"
            android:title="@string/pref_pinch_zoom_title"
            android:summary="@string/pref_pinch_zoom_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_shake_drop"
            android:title="@string/pref_shake_drop_title"
            android:summary="@string/pref_shake_drop_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_sounds">

        <SwitchPreferenceCompat
            android:key="pref_half_hour"
            android:title="@string/pref_half_hour_title"
            android:summary="@string/pref_half_hour_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_time">

        <SeekBarPreference
            android:key="pref_time_speed"
            android:title="@string/pref_time_speed_title"
            android:summary="@string/pref_time_speed_summary"
            android:max="400"
            android:defaultValue="100"
            app:min="25"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_solar_time"
            android:title="@string/pref_solar_time_title"
            android:summary="@string/pref_solar_time_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
